// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator-enroll-phone-sms Send correct payload when back to authenticators list 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                role="presentation"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                      data-se="identifier-container"
                      title="tester13@test.com"
                    >
                      <div
                        class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault emotion-12"
                        data-se="identifier"
                        translate="no"
                      >
                        <div
                          class="MuiChip-icon MuiChip-iconMedium MuiChip-iconColorDefault MuiBox-root emotion-13"
                        >
                          <svg
                            aria-label="User"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-14"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              User
                            </title>
                          </svg>
                        </div>
                        <span
                          class="MuiChip-label MuiChip-labelMedium emotion-15"
                        >
                          tester13@test.com
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-h4 emotion-18"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Set up security methods
                      </h1>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-21"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        Security methods help protect your account by ensuring only you have access.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-23"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h6 emotion-24"
                        data-se="select-authenticator-enroll_Heading_Required_now_aut2h3fft10VeLDPD1d7_3"
                        tabindex="-1"
                      >
                        Required now
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <ul
                      class="MuiBox-root emotion-26"
                      data-se="authenticator-enroll-list"
                    >
                      <li
                        class="MuiBox-root emotion-10"
                      >
                        <button
                          aria-describedby="google_otp_0-description google_otp_0-ctaLabel"
                          aria-label="Set up Google Authenticator."
                          class="MuiBox-root emotion-28"
                          data-se="authenticator-button"
                          tabindex="0"
                          type="button"
                        >
                          <div
                            class="MuiBox-root emotion-1"
                            data-se="authenticator-icon"
                          >
                            <div
                              aria-hidden="true"
                              class="MuiBox-root emotion-30"
                              data-se="factor-beacon mfa-google-auth "
                            >
                              <svg
                                aria-labelledby="google_otp_0"
                                fill="none"
                                height="2.85714286rem"
                                role="img"
                                viewBox="0 0 48 48"
                                width="2.85714286rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title
                                  id="google_otp_0"
                                >
                                  Google Authenticator
                                </title>
                                <path
                                  clip-rule="evenodd"
                                  d="M39.5 26.9545C41.1569 26.9545 42.5 25.6113 42.5 23.9545C42.5 22.2976 41.1569 20.9545 39.5 20.9545H28.6963L34.0982 11.5981C34.9266 10.1632 34.435 8.32845 33.0001 7.50002C31.5652 6.67159 29.7304 7.16322 28.902 8.5981L18.304 26.9545H39.5Z"
                                  fill="#1A73E7"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M18.0981 8.5981C17.2697 7.16322 15.4349 6.67159 14 7.50002C12.5651 8.32845 12.0735 10.1632 12.9019 11.5981L18.3039 20.9545H21.7681L23.5001 17.9546L18.0981 8.5981Z"
                                  fill="#FABB04"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M21.768 20.9545H7.5C5.84315 20.9545 4.5 22.2976 4.5 23.9545C4.5 25.6114 5.84315 26.9545 7.5 26.9545H18.3039L21.768 20.9545Z"
                                  fill="#34A753"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M18.304 26.9545L12.9021 36.3109C12.0736 37.7458 12.5653 39.5806 14.0001 40.409C15.435 41.2374 17.2698 40.7458 18.0982 39.3109L23.5001 29.9546L28.902 39.3109C29.7304 40.7458 31.5652 41.2374 33 40.409C34.4349 39.5805 34.9265 37.7458 34.0981 36.3109L28.6962 26.9545H18.304Z"
                                  fill="#E94335"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M23.5001 17.9546L28.6962 26.9545H18.304L23.5001 17.9546Z"
                                  fill="#174EA5"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiBox-root emotion-31"
                            data-se="authenticator-button-content"
                          >
                            <h2
                              class="MuiTypography-root MuiTypography-h2 emotion-32"
                              data-se="authenticator-button-label"
                              id="google_otp_0-label"
                              translate="no"
                            >
                              Google Authenticator
                            </h2>
                            <p
                              aria-label="Enter a temporary code generated from the Google Authenticator app."
                              class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-33"
                              data-se="authenticator-button-description"
                              id="google_otp_0-description"
                            >
                              Enter a temporary code generated from the Google Authenticator app.
                            </p>
                            <div
                              class="MuiBox-root emotion-34"
                              data-se="google_otp"
                            >
                              <span
                                class="MuiBox-root emotion-35"
                                data-se="cta-button-label"
                                id="google_otp_0-ctaLabel"
                              >
                                Set up
                              </span>
                              <div
                                class="MuiBox-root emotion-36"
                                data-se="cta-button-icon"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-37"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="m18.354 10.94-4.647-4.647-1.414 1.414L15.586 11H5v2h10.586l-3.293 3.293 1.414 1.414 4.647-4.646a1.5 1.5 0 0 0 0-2.122Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    Set up
                                  </title>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </button>
                      </li>
                      <li
                        class="MuiBox-root emotion-10"
                      >
                        <button
                          aria-describedby="okta_verify_1-description okta_verify_1-ctaLabel"
                          aria-label="Set up Okta Verify."
                          class="MuiBox-root emotion-28"
                          data-se="authenticator-button"
                          tabindex="0"
                          type="button"
                        >
                          <div
                            class="MuiBox-root emotion-1"
                            data-se="authenticator-icon"
                          >
                            <div
                              aria-hidden="true"
                              class="MuiBox-root emotion-30"
                              data-se="factor-beacon mfa-okta-verify "
                            >
                              <svg
                                aria-labelledby="okta_verify_1"
                                fill="none"
                                height="2.85714286rem"
                                role="img"
                                viewBox="0 0 48 48"
                                width="2.85714286rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title
                                  id="okta_verify_1"
                                >
                                  Okta Verify
                                </title>
                                <path
                                  clip-rule="evenodd"
                                  d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                                  fill="#00297A"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiBox-root emotion-31"
                            data-se="authenticator-button-content"
                          >
                            <h2
                              class="MuiTypography-root MuiTypography-h2 emotion-32"
                              data-se="authenticator-button-label"
                              id="okta_verify_1-label"
                              translate="no"
                            >
                              Okta Verify
                            </h2>
                            <p
                              aria-label="Okta Verify is an authenticator app, installed on your phone or computer, used to prove your identity."
                              class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-33"
                              data-se="authenticator-button-description"
                              id="okta_verify_1-description"
                            >
                              Okta Verify is an authenticator app, installed on your phone or computer, used to prove your identity
                            </p>
                            <div
                              class="MuiBox-root emotion-34"
                              data-se="okta_verify"
                            >
                              <span
                                class="MuiBox-root emotion-35"
                                data-se="cta-button-label"
                                id="okta_verify_1-ctaLabel"
                              >
                                Set up
                              </span>
                              <div
                                class="MuiBox-root emotion-36"
                                data-se="cta-button-icon"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-37"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="m18.354 10.94-4.647-4.647-1.414 1.414L15.586 11H5v2h10.586l-3.293 3.293 1.414 1.414 4.647-4.646a1.5 1.5 0 0 0 0-2.122Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    Set up
                                  </title>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </button>
                      </li>
                      <li
                        class="MuiBox-root emotion-10"
                      >
                        <button
                          aria-describedby="phone_number_2-description phone_number_2-ctaLabel"
                          aria-label="Set up Phone."
                          class="MuiBox-root emotion-28"
                          data-se="authenticator-button"
                          tabindex="0"
                          type="button"
                        >
                          <div
                            class="MuiBox-root emotion-1"
                            data-se="authenticator-icon"
                          >
                            <div
                              aria-hidden="true"
                              class="MuiBox-root emotion-30"
                              data-se="factor-beacon mfa-okta-phone "
                            >
                              <svg
                                aria-labelledby="phone_number_2"
                                fill="none"
                                height="2.85714286rem"
                                role="img"
                                viewBox="0 0 48 48"
                                width="2.85714286rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title
                                  id="phone_number_2"
                                >
                                  Voice Call Authentication
                                </title>
                                <path
                                  class="siwFillPrimaryDark"
                                  d="M21.5 37h-9a2.6 2.6 0 0 1-2.5-2.682V14.682A2.6 2.6 0 0 1 12.5 12h9a2.6 2.6 0 0 1 2.5 2.682v19.636A2.6 2.6 0 0 1 21.5 37Zm-9-24a1.6 1.6 0 0 0-1.5 1.682v19.636A1.6 1.6 0 0 0 12.5 36h9a1.6 1.6 0 0 0 1.5-1.682V14.682A1.6 1.6 0 0 0 21.5 13h-9Z"
                                  fill="#00297A"
                                />
                                <path
                                  class="siwFillPrimaryDark"
                                  d="M19 34h-4v1h4v-1Zm-1-19a1 1 0 1 0-2 0 1 1 0 0 0 2 0Z"
                                  fill="#00297A"
                                />
                                <path
                                  class="siwFillSecondary"
                                  d="M34.606 34.606 33.9 33.9a13.998 13.998 0 0 0 0-19.8l.707-.707a15 15 0 0 1 0 21.212l-.001.001Z"
                                  fill="#A7B5EC"
                                />
                                <path
                                  class="siwFillSecondary"
                                  d="m31.071 31.071-.707-.707a9 9 0 0 0 0-12.728l.707-.707a10 10 0 0 1 0 14.142Zm-3.535-3.536-.707-.707a4 4 0 0 0 0-5.656l.707-.707a5 5 0 0 1 0 7.07Z"
                                  fill="#A7B5EC"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiBox-root emotion-31"
                            data-se="authenticator-button-content"
                          >
                            <h2
                              class="MuiTypography-root MuiTypography-h2 emotion-32"
                              data-se="authenticator-button-label"
                              id="phone_number_2-label"
                              translate="no"
                            >
                              Phone
                            </h2>
                            <p
                              aria-label="Verify with a code sent to your phone."
                              class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-33"
                              data-se="authenticator-button-description"
                              id="phone_number_2-description"
                            >
                              Verify with a code sent to your phone
                            </p>
                            <div
                              class="MuiBox-root emotion-34"
                              data-se="phone_number"
                            >
                              <span
                                class="MuiBox-root emotion-35"
                                data-se="cta-button-label"
                                id="phone_number_2-ctaLabel"
                              >
                                Set up
                              </span>
                              <div
                                class="MuiBox-root emotion-36"
                                data-se="cta-button-icon"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-37"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="m18.354 10.94-4.647-4.647-1.414 1.414L15.586 11H5v2h10.586l-3.293 3.293 1.414 1.414 4.647-4.646a1.5 1.5 0 0 0 0-2.122Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    Set up
                                  </title>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </button>
                      </li>
                      <li
                        class="MuiBox-root emotion-10"
                      >
                        <button
                          aria-describedby="webauthn_3-description webauthn_3-ctaLabel"
                          aria-label="Set up Security Key or Biometric Authenticator."
                          class="MuiBox-root emotion-28"
                          data-se="authenticator-button"
                          tabindex="0"
                          type="button"
                        >
                          <div
                            class="MuiBox-root emotion-1"
                            data-se="authenticator-icon"
                          >
                            <div
                              aria-hidden="true"
                              class="MuiBox-root emotion-30"
                              data-se="factor-beacon mfa-webauthn "
                            >
                              <svg
                                aria-labelledby="webauthn_3"
                                fill="none"
                                height="2.85714286rem"
                                role="img"
                                viewBox="0 0 48 48"
                                width="2.85714286rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title
                                  id="webauthn_3"
                                >
                                  Security Key or Biometric Authenticator
                                </title>
                                <path
                                  class="siwFillPrimaryDark"
                                  d="M24 17V9h-9v8h-3v15.5a2.5 2.5 0 0 0 2.5 2.5h6.34a8.58 8.58 0 0 1-.38-1H14.5a1.5 1.5 0 0 1-1.5-1.5V18h13v3.84a8.58 8.58 0 0 1 1-.38V17h-3Zm-8 0v-7h7v7h-7Z"
                                  fill="#00297A"
                                />
                                <path
                                  class="siwFillPrimaryDark"
                                  d="M19.5 25a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Zm0-4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"
                                  fill="#00297A"
                                />
                                <path
                                  class="siwFillSecondary"
                                  d="M30 40a9 9 0 1 1 9-9 9.01 9.01 0 0 1-9 9Zm0-17a8 8 0 1 0 8 8 8.009 8.009 0 0 0-8-8Z"
                                  fill="#A7B5EC"
                                />
                                <path
                                  class="siwFillSecondary"
                                  d="M32.084 36.019a.472.472 0 0 1-.319-.112.501.501 0 0 1-.159-.532c.43-1.389 1.274-4.787-.119-6.352a1.962 1.962 0 0 0-1.946-.6 1.93 1.93 0 0 0-1.387 2.354c.007.024.666 2.823-.966 4.55a.5.5 0 1 1-.727-.685c1.24-1.314.728-3.6.723-3.622a2.933 2.933 0 0 1 2.106-3.566 2.977 2.977 0 0 1 2.944.906c1.67 1.875.922 5.386.328 7.312a.5.5 0 0 1-.478.347Z"
                                  fill="#A7B5EC"
                                />
                                <path
                                  class="siwFillSecondary"
                                  d="M28.63 37.25a.5.5 0 0 1-.359-.849c2.235-2.3 1.345-5.782 1.336-5.817a.5.5 0 0 1 .966-.259c.045.165 1.052 4.067-1.586 6.774a.5.5 0 0 1-.358.151Z"
                                  fill="#A7B5EC"
                                />
                                <path
                                  class="siwFillSecondary"
                                  d="M34.88 35.2a.5.5 0 0 1-.488-.612c.493-2.2.716-5.235-1.03-7.2a4.508 4.508 0 0 0-4.455-1.357 4.416 4.416 0 0 0-2.72 2.069 4.2 4.2 0 0 0-.468 3.2 3.1 3.1 0 0 1-.355 2.347.5.5 0 1 1-.728-.685 2.37 2.37 0 0 0 .11-1.434 5.174 5.174 0 0 1 .577-3.939 5.42 5.42 0 0 1 3.333-2.518 5.524 5.524 0 0 1 5.453 1.66c1.628 1.832 2.051 4.551 1.257 8.082a.5.5 0 0 1-.487.387Z"
                                  fill="#A7B5EC"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiBox-root emotion-31"
                            data-se="authenticator-button-content"
                          >
                            <h2
                              class="MuiTypography-root MuiTypography-h2 emotion-32"
                              data-se="authenticator-button-label"
                              id="webauthn_3-label"
                              translate="no"
                            >
                              Security Key or Biometric Authenticator
                            </h2>
                            <p
                              aria-label="Use a security key or a biometric authenticator to sign in."
                              class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-33"
                              data-se="authenticator-button-description"
                              id="webauthn_3-description"
                            >
                              Use a security key or a biometric authenticator to sign in
                            </p>
                            <div
                              class="MuiBox-root emotion-34"
                              data-se="webauthn"
                            >
                              <span
                                class="MuiBox-root emotion-35"
                                data-se="cta-button-label"
                                id="webauthn_3-ctaLabel"
                              >
                                Set up
                              </span>
                              <div
                                class="MuiBox-root emotion-36"
                                data-se="cta-button-icon"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-37"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="m18.354 10.94-4.647-4.647-1.414 1.414L15.586 11H5v2h10.586l-3.293 3.293 1.414 1.414 4.647-4.646a1.5 1.5 0 0 0 0-2.122Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    Set up
                                  </title>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </button>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-72"
                      data-se="cancel"
                      role="link"
                      type="button"
                    >
                      Back to sign in
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-enroll-phone-sms should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header authCoinSpacing"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                role="presentation"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                class="MuiBox-root emotion-7"
                data-se="factor-beacon mfa-okta-phone "
              >
                <svg
                  aria-labelledby="mfa-okta-phone"
                  fill="none"
                  height="2.85714286rem"
                  role="img"
                  viewBox="0 0 48 48"
                  width="2.85714286rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="mfa-okta-phone"
                  >
                    Voice Call Authentication
                  </title>
                  <path
                    class="siwFillPrimaryDark"
                    d="M21.5 37h-9a2.6 2.6 0 0 1-2.5-2.682V14.682A2.6 2.6 0 0 1 12.5 12h9a2.6 2.6 0 0 1 2.5 2.682v19.636A2.6 2.6 0 0 1 21.5 37Zm-9-24a1.6 1.6 0 0 0-1.5 1.682v19.636A1.6 1.6 0 0 0 12.5 36h9a1.6 1.6 0 0 0 1.5-1.682V14.682A1.6 1.6 0 0 0 21.5 13h-9Z"
                    fill="#00297A"
                  />
                  <path
                    class="siwFillPrimaryDark"
                    d="M19 34h-4v1h4v-1Zm-1-19a1 1 0 1 0-2 0 1 1 0 0 0 2 0Z"
                    fill="#00297A"
                  />
                  <path
                    class="siwFillSecondary"
                    d="M34.606 34.606 33.9 33.9a13.998 13.998 0 0 0 0-19.8l.707-.707a15 15 0 0 1 0 21.212l-.001.001Z"
                    fill="#A7B5EC"
                  />
                  <path
                    class="siwFillSecondary"
                    d="m31.071 31.071-.707-.707a9 9 0 0 0 0-12.728l.707-.707a10 10 0 0 1 0 14.142Zm-3.535-3.536-.707-.707a4 4 0 0 0 0-5.656l.707-.707a5 5 0 0 1 0 7.07Z"
                    fill="#A7B5EC"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-8"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-9"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                      data-se="identifier-container"
                      title="tester13@test.com"
                    >
                      <div
                        class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault emotion-13"
                        data-se="identifier"
                        translate="no"
                      >
                        <div
                          class="MuiChip-icon MuiChip-iconMedium MuiChip-iconColorDefault MuiBox-root emotion-14"
                        >
                          <svg
                            aria-label="User"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              User
                            </title>
                          </svg>
                        </div>
                        <span
                          class="MuiChip-label MuiChip-labelMedium emotion-16"
                        >
                          tester13@test.com
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Set up phone authentication
                      </h1>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  />
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-23"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        A code was sent to your phone. Enter the code below to verify.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-23"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        Carrier messaging charges may apply
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-28"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-29"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Enter Code
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-30"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="off"
                          class="MuiInputBase-input emotion-31"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          inputmode="numeric"
                          name="credentials.passcode"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-33"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Verify
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-35"
                      data-se="switchAuthenticator"
                      role="link"
                      type="button"
                    >
                      Return to authenticator list
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-35"
                      data-se="cancel"
                      role="link"
                      type="button"
                    >
                      Back to sign in
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
